fix(project): add required description field

--- a/content/projects/javard-humanoid.mdx
+++ b/content/projects/javard-humanoid.mdx
@@ -1,6 +1,7 @@
 ﻿---
 title: JAVARD – Biped Humanoid Racer
 summary: Humanoid robot sprint project for LARC (Raspberry Pi 5 + PCA9685 + MG996R).
+description: "Humanoid robot sprint project for LARC; gait loop, offsets, RPi5 + PCA9685 + MG996R."
 date: "2025-10-24"
 slug: javard-humanoid
 tech: ["Raspberry Pi 5", "MicroPython", "PCA9685", "MG996R"]
